fixed pr and added SaveRefreshToken
