# internal/app/auth/server.go
@@ -46,7 +46,7 @@ func (s *Server) RegisterHandlerFromEndpoint(
 func (s *Server) SignIn(ctx context.Context, req *authPkg.SignInRequest) (*authPkg.SignInResponse, error) {
 	log.Printf("SignIn request: login=%s", req.Login)
 
-	accessToken, err := s.authService.SignIn(ctx, req.Login, req.Password)
+	tokens, err := s.authService.SignIn(ctx, req.Login, req.Password)
 	if err != nil {
 
 		if errors.Is(err, model.ErrAlreadyExists) {
@@ -56,7 +56,8 @@ func (s *Server) SignIn(ctx context.Context, req *authPkg.SignInRequest) (*authP
 	}
 	// добавить печеньки, в которые я положу refreshToken, проблема в том, что всё может пойти по ...
 	return &authPkg.SignInResponse{
-		AccessToken: accessToken.AccessToken,
+		AccessToken:  tokens.AccessToken,
+		RefreshToken: tokens.RefreshToken,
 	}, nil
 }
 func (s *Server) SignUp(ctx context.Context, req *authPkg.SignUpRequest) (*authPkg.SignUpResponse, error) { // вынести в отдельный файл, Виталий негодует
