# pkg/api/auth/v1/service.pb.validate.go
@@ -369,6 +369,8 @@ func (m *SignInResponse) validate(all bool) error {
 
 	// no validation rules for AccessToken
 
+	// no validation rules for RefreshToken
+
 	if len(errors) > 0 {
 		return SignInResponseMultiError(errors)
 	}
